force-app/main/default/objects/Resources__c/fields/Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Home_Office__c</fullName>
    <label>Home Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>