force-app/main/default/objects/Resources__c/fields/Hourly_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost_Rate__c</fullName>
    <label>Hourly Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>