force-app/main/default/objects/Resources__c/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <externalId>true</externalId>
    <label>Resource ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>