force-app/main/default/objects/Resources__c/fields/Start_Date_in_industry__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_in_industry__c</fullName>
    <label>Start Date in industry</label>
    <type>Date</type>
</CustomField>