force-app/main/default/objects/Resources__c/fields/Year_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Experience__c</fullName>
    <formula>FLOOR((TODAY() - Start_Date_in_industry__c) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>