force-app/main/default/objects/Resources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contacts__c</columns>
    <columns>Year_of_Experience__c</columns>
    <columns>Education__c</columns>
    <columns>Region__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Resource_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>